# old-relic

./: .gitignore  readme.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: application.rs  lib.rs  newrelic.rs  query.rs  timeseries.rs  trace.rs  webtransaction.rs
tui/: Cargo.toml
tui/src/: app.rs  backend.rs  client.rs  dataset.rs  input.rs  main.rs  parser.rs  query.rs  session.rs  ui.rs
