[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
crossterm = "0.27.0"
ratatui = "0.26.1"
reqwest = "0.11.24"
tokio = "1.36.0"
server = { path = "../server" }
anyhow = "1.0.80"
serde = "1.0.197"
nom = "7.1.3"
tui-big-text = "0.4.2"
crossbeam-channel = "0.5.12"
serde_yaml = "0.9.33"
