[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
crossterm = "0.27.0"
ratatui = "0.28.0"
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
tui-big-text = "0.6.0"
crossbeam-channel = "0.5.12"
serde_yaml = "0.9.33"
rand = "0.8.5"
throbber-widgets-tui = "0.7.0"
serde_json = "1.0.127"
tokio-stream = "0.1.16"
regex = "1.11.0"
log = "0.4.22"
simplelog = "0.12.2"
